--- a/app/src/main/res/layout/activity_click_maraton.xml
+++ b/app/src/main/res/layout/activity_click_maraton.xml
@@ -190,7 +190,7 @@
                         android:layout_centerHorizontal="true"
                         android:background="@drawable/tableborder"
                         android:padding="5dp"
-                        android:text="Lugar"
+                        android:text="Distancia"
                         android:textAlignment="center"
                         android:textColor="@android:color/black"
                         android:textSize="14dp" />
@@ -378,7 +378,6 @@
                             android:textAlignment="center"
                             android:textColor="@android:color/black"
                             android:textSize="14dp">
-
                         </TextView>
                     </LinearLayout>
 
@@ -389,6 +388,7 @@
                         android:orientation="vertical">
 
                         <EditText
+                            android:id="@+id/codigo"
                             android:layout_width="match_parent"
                             android:layout_height="match_parent"
                             android:background="@drawable/inputs"
