--- a/app/src/main/res/layout/all_mi_carreras_layout.xml
+++ b/app/src/main/res/layout/all_mi_carreras_layout.xml
@@ -66,7 +66,7 @@
                     android:layout_height="wrap_content"
                     android:layout_marginLeft="5dp"
                     android:layout_marginTop="5dp"
-                    android:text="user name"
+                    android:text="Maraton name"
                     android:textAlignment="center"
                     android:textColor="@android:color/black"
                     android:textSize="16sp"
