--- a/app/src/main/res/layout/activity_register.xml
+++ b/app/src/main/res/layout/activity_register.xml
@@ -155,7 +155,8 @@
                     android:layout_margin="10dp"
                     android:background="@drawable/button"
                     android:padding="5dp"
-                    android:text="Create Account" />
+                    android:text="Create Account"
+                    android:textColor="@color/colortitle" />
 
             </LinearLayout>
 
