--- a/app/src/main/res/layout/activity_settings.xml
+++ b/app/src/main/res/layout/activity_settings.xml
@@ -459,7 +459,7 @@
                             android:layout_width="match_parent"
                             android:layout_height="wrap_content"
                             android:layout_marginBottom="20dp"
-                            android:background="@drawable/button"
+                            android:background="@drawable/buttonsuccess"
                             android:text="Guardar Cambios"
                             android:textAllCaps="false"
                             android:textColor="@color/colorAccent"
