--- a/app/src/main/res/layout/all_carreras_layout.xml
+++ b/app/src/main/res/layout/all_carreras_layout.xml
@@ -26,7 +26,7 @@
                 android:layout_height="wrap_content"
                 android:text="Marathon Name"
                 android:textAlignment="center"
-                android:textColor="@color/colortitle"
+                android:textColor="@color/colorPrimaryDark"
                 android:layout_margin="5dp"
                 android:textSize="16dp"
                 android:textStyle="bold" />
