--- a/app/src/main/res/layout/all_mi_carreras_layout.xml
+++ b/app/src/main/res/layout/all_mi_carreras_layout.xml
@@ -34,32 +34,6 @@
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:orientation="vertical">
-                <LinearLayout
-                    android:layout_width="match_parent"
-                    android:layout_height="wrap_content"
-                    android:orientation="horizontal"
-                    android:layout_marginLeft="5dp"
-                    android:padding="2dp">
-
-                    <TextView
-                        android:id="@+id/text"
-                        android:layout_width="wrap_content"
-                        android:layout_height="wrap_content"
-                        android:text="Fecha de la Carrera : "
-                        android:textColor="@android:color/darker_gray"
-                        android:textSize="10sp"
-                        android:textStyle="bold" />
-
-                    <TextView
-                        android:id="@+id/my_maraton_date"
-                        android:layout_width="wrap_content"
-                        android:layout_height="wrap_content"
-                        android:text="Date"
-                        android:textColor="@android:color/black"
-                        android:textSize="11sp" />
-
-                </LinearLayout>
-
                 <TextView
                     android:id="@+id/my_maraton_name"
                     android:layout_width="match_parent"
@@ -82,6 +56,15 @@
                     android:textAlignment="center"
                     android:textColor="@android:color/black"
                     android:textSize="12sp" />
+
+                <TextView
+                    android:id="@+id/my_maraton_date"
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:text="Date"
+                    android:textAlignment="center"
+                    android:textColor="@android:color/black"
+                    android:textSize="11sp" />
             </LinearLayout>
         </LinearLayout>
     </LinearLayout>
