--- a/app/src/main/res/layout/navigation_header.xml
+++ b/app/src/main/res/layout/navigation_header.xml
@@ -1,8 +1,8 @@
 <?xml version="1.0" encoding="utf-8"?>
 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
-    android:layout_height="200dp"
-    android:background="@drawable/header"
+    android:layout_height="250dp"
+    android:background="@color/colorPrimaryDark"
     android:orientation="vertical">
 
     <TextView
@@ -10,11 +10,12 @@
         android:layout_width="150dp"
         android:layout_height="25dp"
         android:layout_centerHorizontal="true"
-        android:layout_marginTop="175dp"
+        android:layout_below="@+id/nav_profile_image"
         android:text="username"
         android:textAlignment="center"
-        android:textColor="#252850"
+        android:layout_marginTop="5dp"
         android:textSize="16sp"
+        android:textColor="@color/colortitle"
         android:textStyle="italic" />
 
     <de.hdodenhof.circleimageview.CircleImageView
